--- a/_posts/2020-10-10-백준 1151(문제풀이).md
+++ b/_posts/2020-10-10-백준 1151(문제풀이).md
@@ -14,20 +14,20 @@ title: BAEKJOON 1151
 
 ~~~python
 
-// input_str에 문자열 입려 받는다.
+# input_str에 문자열 입려 받는다.
 input_str = input()
-// input_arr에 한글자씩 쪼개서 넣는다
+# input_arr에 한글자씩 쪼개서 넣는다
 input_arr = list(map(str, input_str))
-//공백 총 갯수 초기화
+# 공백 총 갯수 초기화
 count = 0
 
-//양 끝 부분 공백 있으면, 빼주는 과정
+# 양 끝 부분 공백 있으면, 빼주는 과정
 if input_arr[0] == ' ':
     count -= 1
 if input_arr[-1] == ' ':
     count -= 1
 
-//공백을 다른 문자로 대체하고, 그 문자를 세는 작업
+# 공백을 다른 문자로 대체하고, 그 문자를 세는 작업
 input_str = input_str.replace(' ', '^&*')
 count += (input_str.count('^&*') + 1)
 
