--- a/_posts/2020-10-11-백준 1316(문제풀이).md
+++ b/_posts/2020-10-11-백준 1316(문제풀이).md
@@ -57,13 +57,14 @@ print(numOfgroup)
         <dd>Return the highest index in S where substring sub is found, such that sub is contained within S[start:end]</dd>
 </dl>
 
-#### 문자열 나누기(split)
+#### 정렬하기(sorted)
    <dl>
-        <dt>split(char)</dt>
-        <dd>char르 기준으로 문자열으 나눈다. default는 공백문자를 기준</dd>
+        <dt>def sorted(iterable: Iterable[_T], key: Optional[Callable[[_T], Any]]=..., reverse: bool=...)</dt>
+        <dd>default는 오름차순으로 정렬하여, list로 반환한다. 또한, custom key를 사용하여 sort order를 정할 수 있다.</dd>
    </dl>
 
-> 위 두가지 기능을 통해서, 한줄 코딩을 할 수 있다??!  
+
+> sorted 함수(+ key)를 이용해서 original 문자열과 sort된 문자열의 비교를 통해, 더 간결한 코딩을 할 수 있다??!  
 당신도 한번 생각해 보길 바란다. :)
   
   
@@ -88,10 +89,27 @@ print(numOfgroup)
   
 ### 정답
 ~~~python
+input_str = []
+numOfgroup = 0
 
-print(len(str(input()).strip().split()))
+for i in range(0, int(input())):
+    input_str.append(input())
 
+for input_str in input_str:
+    if list(input_str) == sorted(input_str, key=input_str.find):
+        numOfgroup += 1
+
+print(numOfgroup)
 ~~~
 
-
+### sorted함수 key 예제
+~~~python
+students = [
+    ('kim', 'A', 100),
+    ('park', 'A+', 120),
+    ('lee', 'B', 95)
+]
+sorted(students, key = lambda input: output[2])
+~~~
+> key를 통해서 쉽게 원하는 원소의 원하는 방향으로 쉽게 코딩할 수 있다는 점을 알아두자!
 
