사진 재수정

--- a/_posts/2020-10-14-백준 1002(문제풀이) 복사본.md
+++ b/_posts/2020-10-14-백준 1002(문제풀이) 복사본.md
@@ -6,7 +6,9 @@ title: BAEKJOON 1002
 # 문제
 > 조규현과 백승환은 터렛에 근무하는 직원이다. 하지만 워낙 존재감이 없어서 인구수는 차지하지 않는다. 다음은 조규현과 백승환의 사진이다.
 
-![placeholder](<"https://user-images.githubusercontent.com/37113547/72324968-723e7180-36ef-11ea-9cee-c24b9bc6ed86.png">)
+<div>
+<img width="129" alt="스크린샷 2020-01-14 오후 5 00 46" src="https://user-images.githubusercontent.com/37113547/72324968-723e7180-36ef-11ea-9cee-c24b9bc6ed86.png">
+</div>
 
 # 입력
 > 첫째 줄에 A, B, C가 빈 칸을 사이에 두고 순서대로 주어진다. A, B, C는 21억 이하의 자연수이다.
