문제 풀이 완료 (최종)

--- a/_posts/2020-10-14-백준 1002(문제풀이).md
+++ b/_posts/2020-10-14-백준 1002(문제풀이).md
@@ -119,3 +119,6 @@ for i in count:
     <dt>def pow(x, n)</dt>
     <dd>x의 n승의 값을 반환해준다.</dd>
 </dl>
+
+> 이 문제 또한 정답률이 낮지만, 아무도 나와 같은 사람이 있을거라 생각한다. 기초적인 지식만 있으면 쉽게 풀 수 있는 문제이다.
+math를 이용할 수 있는 문제라 재미있었다.
