--- a/_posts/2020-10-16-백준 1018(문제풀이).md
+++ b/_posts/2020-10-16-백준 1018(문제풀이).md
@@ -14,25 +14,63 @@ title: BAEKJOON 1018
 -----
 ### 나의 처음 코드
 
-> 
+>  print 문으로 진행상황 보려고 출력찍는 작업할 때, 굉장히 바보같은 실수로 엄청 헤맸다. 항상 집중해야함을 잊지 말아야한다;)
+이 문제는 완전히 노가다 문제다. (0,0) 좌표부터 행렬을 초과하지 않게 하나씩 다 비교하고, 다 돌려보는 문제이다. 물론 3중으로 포문을 안 짠사람도 있지만, 3중 포문안에 모든걸 다 처리해줬으므로 이것도 그럭저럭 노가다 코드인 것이다.
+나의 key idea는 w_first와 b_first를 만들어서 하나씩 비교해주는 것이다. 다른 내용들은 주석안에 담겨져있다.
 
 ~~~python
+row, col = list(map(int, input().split()))
+chess = []  # 체스판을 받을 list
+flag = 0  # b_first로 시작하기 위한 flag
+flag2 = 1  # w_first로 시작하기 위한 flag
+count = 0  # flag로 시작했을 때 최소 숫자
+count2 = 0  # flag2로 시작했을 때 최소 숫자
+w_first = 'WBWBWBWB'
+b_first = 'BWBWBWBW'
+min_count = 99999  # 최소 바꾼 횟수
 
-~~~
------ 
-### 기초로 다시 생각한 코드
-> 
-~~~python
-\
+# 체스판 받기
+for i in range(row):
+    chess.append(input())
+
+# 총 8x8로 받을 수 있으므로, 범위는 당연히 row-7, col-7
+for i in range(0, row-7):
+    for j in range(0, col-7):
+        for m in range(0, 8):
+            flag = 0 if flag == 1 else 1  # 제일 처음시작시에 b_first로 검사한다. 그 후에는 번갈아서
+            flag2 = 0 if flag2 == 1 else 1  # 제일 처음시작시에 w_first로 검사한다. 그 후에는 번갈아서
+            for n in range(0, 8):
+                #flag 컨트롤
+                if flag == 0:
+                    if w_first[n] != chess[m+i][n+j]:
+                        count += 1
+                if flag == 1:
+                    if b_first[n] != chess[m+i][n+j]:
+                        count += 1
+                #flag2 컨트롤
+                if flag2 == 0:
+                    if w_first[n] != chess[m+i][n+j]:
+                        count2 += 1
+                if flag2 == 1:
+                    if b_first[n] != chess[m+i][n+j]:
+                        count2 += 1
+        min_count = min(count, count2, min_count)
+        #초기화 작업
+        flag = 0
+        flag2 = 1
+        count = 0
+        count2 = 0
+
+print(min_count)
 ~~~
 -----
-#### import math(pow, sqrt)
+#### min()
 <dl>
-        <dt>sum(list)</dt>
-        <dd>
-            굳이 포문으로 리스트의 원소를 하나씩 접근할 필요 없이, 주어진 숫자 e.g. 126이면 이것을 문자열로 강제변환후에
-            정수로 맵핑을 해줘서 리스트로 받은것을, sum()함수를 이용해서 한번에 구할 수 있다. 
+        <dt>def min(iterable: Iterable[_T], key: Callable[[_T], Any]=..., default: _VT)</dt>
+        <dd> single arg(iterable)일 때는 그것들중에 가장 작은 값을 반환한다. 2개 이상의 args일 때는 가장 작은
+        값을 반환한다. 즉 list를 하나 넣었을 때는, 리스트중 가장 작은 값을 반환한다. 반면 예를 들어 a,b,c 가 (값/문자)이고
+        이것을 arg로 넣는다면, Iterable 하지 않아도 가장 작은 값을 반환한다. 
         </dd>
 </dl>
 
-> 같은 브루트포스(무식하게 다해보는) 방식이더라도, 조금 더 나은 무식함이 있음을 알고있자!
+> 같은 브루트포스(무식하게 다해보는) 방식은 별로 썩 풀어서 기분좋은 문제는 아닌것 같다. 집중력만을 요하는 문제랄까...?
