설명 마무리

--- a/_posts/2020-1-20-백준 백트래킹(문제풀이).md
+++ b/_posts/2020-1-20-백준 백트래킹(문제풀이).md
@@ -43,6 +43,80 @@ bt(0) #함수 호출
 ~~~
 > 결과는 ***정답입니다***. 백트래킹이 어떻게 돌아가는지 이해를 한다면, 나머지 15650, 15651, 15652 문제들도 식은 죽 먹기이다.
 
------
+# 15650 문제 코드
+~~~python
+m, n = list(map(int, input().split()))
 
-> readline()으로 문자 받을 때는 '\n' 도 같이 받는 것을 기억하자~!
+check_list = [False] * (m+1)
+print_list = []
+idx = 1
+
+def bt(cnt : int):
+    if cnt == n:
+        print(*print_list)
+        return
+    for i in range(1, m+1):
+        if check_list[i] == True:
+            continue
+        #len(print_list) 조건이 앞인 이유는 뒤에껄 먼저 했을 경우 out of range error 가 난다.
+        #처음 n/m 문제와 다른 조건이 print_list[len(print_list)-1] > i 이다.
+            #문제를 읽어보면 알겠지만, 앞으로 새로 넣을 원소가 넣기 전 마지막 idx에 들어있는 값보다 크면 안된다.
+        if len(print_list) != 0 and print_list[len(print_list)-1] > i: 
+            continue
+        print_list.append(i)
+        check_list[i] = True
+        bt(cnt + 1)
+        print_list.pop()
+        check_list[i] = False
+    
+bt(0)
+~~~
+-----
+# 15651 문제 코드
+~~~python
+m, n = list(map(int, input().split()))
+
+check_list = [False] * (m+1)
+print_list = []
+idx = 1
+
+def bt(cnt : int):
+    if cnt == n:
+        print(*print_list)
+        return
+    for i in range(1, m+1):
+        print_list.append(i)
+        check_list[i] = True
+        bt(cnt + 1)
+        print_list.pop()
+        check_list[i] = False
+    
+bt(0)
+~~~
+-----
+# 15652 문제 코드
+~~~python
+m, n = list(map(int, input().split()))
+
+check_list = [False] * (m+1)
+print_list = []
+idx = 1
+
+def bt(cnt : int):
+    if cnt == n:
+        print(*print_list)
+        return
+    for i in range(1, m+1):
+        #문제를 읽어보면 알겠지만, 앞으로 새로 넣을 원소가 넣기 전 마지막 idx에 들어있는 값보다 크면 안된다.
+        if len(print_list) != 0 and print_list[len(print_list)-1] > i: 
+            continue
+        print_list.append(i)
+        check_list[i] = True
+        bt(cnt + 1)
+        print_list.pop()
+        check_list[i] = False
+    
+bt(0)
+~~~
+-----
+> 위 문제들은 코드 1~2줄만 차이나는 응용문제이다. 백트래킹의 기초를 이해하기 위해서는 꼭 풀어봐야할 문제이다.
