--- a/_posts/2020-1-19-백트래킹 기법 .md
+++ b/_posts/2020-1-19-백트래킹 기법 .md
@@ -8,3 +8,5 @@ title: Backtracking
 # 구현
 > 백트래킹은 보통 재귀 함수로 구현이 된다. 문제마다 다르겠지만, 하나 이상의 변수로 현재의 상태를 보관하거나 과거의 상태를 불러 올 수 있는 작업이 요하는 경우가 많다.
 
+
+> 백트래킹 관련된 예시문제들은 15649, 15650, 15651, 15652, nqueen, 스도쿠 문제들을 참고하면 된다.
