--- a/_posts/2020-1-21-백준 nqueen(문제풀이).md
+++ b/_posts/2020-1-21-백준 nqueen(문제풀이).md
@@ -4,119 +4,68 @@ title: BAEKJOON 15649, 15650, 15651, 15652
 ---
 
 # 15649 문제
-> 자연수 N과 M이 주어졌을 때, 아래 조건을 만족하는 길이가 M인 수열을 모두 구하는 프로그램을 작성하시오.
-1부터 N까지 자연수 중에서 중복 없이 M개를 고른 수열
+> N-Queen 문제는 크기가 N × N인 체스판 위에 퀸 N개를 서로 공격할 수 없게 놓는 문제이다.
+N이 주어졌을 때, 퀸을 놓는 방법의 수를 구하는 프로그램을 작성하시오.
 
 # 입력
-> 첫째 줄에 자연수 N과 M이 주어진다. (1 ≤ M ≤ N ≤ 8)
+> 첫째 줄에 N이 주어진다. (1 ≤ N < 15)
 
 -----
 ### 나의 처음 코드
 
-> 백트래킹에서는 ***중요한 포인트 3가지*** 가 있다. ***첫 번째*** 로는, 재귀로 계속 depth가 깊어져 갈 때 특정 조건으로 return하는 조건문을 만들어주는 것. ***두 번째*** 로는, 재귀로 진입 한 후에 검사하는 것이 아니라 진입 하기 전에 적합한지 여부를 따져주는 것. ***세 번째*** 로는, 적합여부를 판단하는 변수에 대한 적용과 해제이다. 세 번째 설명은 잘 와닿지 않겠지만, 전체 코드에서 다음과 같은 부분을 뜻한다.
-~~~python
-check_list[i] = True
-#~~~
-check_list[i] = False
-~~~
-
->전체 코드는 다음과 같다.
+> 
 
 ~~~python
-m, n = list(map(int, input().split()))
-#m(숫자 범위), n(출력 갯수)
-print_list = [] #출력할 숫자를 담고있는 리스트
-check_list = [False] * (m+1) #적합여부를 판단해줄 리스트
-def bt(depth : int):
-    if depth == n: #위에서 언급한 첫 번째 포인트 
-        print(*print_list)
-    for i in range(1, m+1):
-        if check_list[i] == True: #위에서 언급한 두 번째 포인트
-            continue
-        check_list[i] = True
-        print_list.append(i)
-        bt(depth+1)
-        print_list.pop()
-        check_list[i] = False
-        
-bt(0) #함수 호출
-~~~
-> 결과는 ***정답입니다***. 백트래킹이 어떻게 돌아가는지 이해를 한다면, 나머지 15650, 15651, 15652 문제들도 식은 죽 먹기이다.
+n = int(input())
 
-# 15650 문제 코드
-~~~python
-m, n = list(map(int, input().split()))
+row_list = [] #행
+col_list = [] #열
 
-check_list = [False] * (m+1)
-print_list = []
-idx = 1
+#들어갈 수 있는 좌표인지 체크하는 함수
+def check_valid(coord : tuple):
+    row = coord[0]
+    col = coord[1]
+    tmp_row = 0
+    tmp_col = 0
+    #퀸이 들어가 있는 좌표의 행과 열이 같다면 들어갈 수 없다.
+    if (row in row_list) or (col in col_list):
+        return False
+        #퀸이 들어가 있는 좌표의 대각선 좌표에 존재한다면 들어갈 수 없다.
+    for i in range(len(row_list)):
+        tmp_row = abs(row_list[i] - row)
+        tmp_col = abs(col_list[i] - col)
+        if tmp_row == tmp_col:
+            return False
+    return True
 
-def bt(cnt : int):
-    if cnt == n:
-        print(*print_list)
+def n_queen(depth : int):
+    global num_of_case
+    #한 행에 무조건 하나의 퀸이 들어가야하므로 탈출 조건은 다음과 같다.
+    if depth == n:
+        num_of_case += 1
         return
-    for i in range(1, m+1):
-        if check_list[i] == True:
-            continue
-        #len(print_list) 조건이 앞인 이유는 뒤에껄 먼저 했을 경우 out of range error 가 난다.
-        #처음 n/m 문제와 다른 조건이 print_list[len(print_list)-1] > i 이다.
-            #문제를 읽어보면 알겠지만, 앞으로 새로 넣을 원소가 넣기 전 마지막 idx에 들어있는 값보다 크면 안된다.
-        if len(print_list) != 0 and print_list[len(print_list)-1] > i: 
-            continue
-        print_list.append(i)
-        check_list[i] = True
-        bt(cnt + 1)
-        print_list.pop()
-        check_list[i] = False
-    
-bt(0)
+    #재귀부분
+    for i in range(0, n):
+        if depth == 0 or check_valid((depth, i)):
+            row_list.append(depth)
+            col_list.append(i)
+            n_queen(depth+1)
+            row_list.pop()
+            col_list.pop()
+    return num_of_case
+
+num_of_case = 0
+print(n_queen(0))
 ~~~
------
-# 15651 문제 코드
+> 결과는 ***정답입니다***. 단, ***Pypy3*** 에서 돌리지 않고, Python3에서 돌리면 시간초과가 난다. 다른 사람들도 대부분 Pypy3로 돌렸다. 위의 코드 경우, 26164ms 가 나오는데 56ms가 나온 코드가 있다. 어처구니 없으니 준비하길 바란다.
+
 ~~~python
-m, n = list(map(int, input().split()))
-
-check_list = [False] * (m+1)
-print_list = []
-idx = 1
-
-def bt(cnt : int):
-    if cnt == n:
-        print(*print_list)
-        return
-    for i in range(1, m+1):
-        print_list.append(i)
-        check_list[i] = True
-        bt(cnt + 1)
-        print_list.pop()
-        check_list[i] = False
-    
-bt(0)
+print([1,0,0,2,10,4,40,92,352,724,2680,14200,73712,365596][int(input())-1])
 ~~~
------
-# 15652 문제 코드
+
+> 정답을 써놓고, 정답만 추출하는 식의 코드이다. 다행히 입력하는 값들이 적어서 다행이지 많으면 안되는 코드일 것이다. 위의 코드에서 한가지 배울점은, 
 ~~~python
-m, n = list(map(int, input().split()))
-
-check_list = [False] * (m+1)
-print_list = []
-idx = 1
-
-def bt(cnt : int):
-    if cnt == n:
-        print(*print_list)
-        return
-    for i in range(1, m+1):
-        #문제를 읽어보면 알겠지만, 앞으로 새로 넣을 원소가 넣기 전 마지막 idx에 들어있는 값보다 크면 안된다.
-        if len(print_list) != 0 and print_list[len(print_list)-1] > i: 
-            continue
-        print_list.append(i)
-        check_list[i] = True
-        bt(cnt + 1)
-        print_list.pop()
-        check_list[i] = False
-    
-bt(0)
+print([list][index]) #이렇게 쓰면 list의 index가 가지고 있는 값이 출력된다는 것이다. 한줄로 간편히 쓸 때 편하다.
 ~~~
------
-> 위 문제들은 코드 1~2줄만 차이나는 응용문제이다. 백트래킹의 기초를 이해하기 위해서는 꼭 풀어봐야할 문제이다.
+
+> 백트래킹하면 무조건 나오는 문제인만큼, 한번 꼭 풀어보길 바란다.
