문제수정 및 1904문제 중간정검

--- a/_posts/2020-1-27-백준 1904(문제풀이).md
+++ b/_posts/2020-1-27-백준 1904(문제풀이).md
@@ -1,16 +1,16 @@
 ---
 layout: post
-title: BAEKJOON 1003
+title: BAEKJOON 1904
 ---
 
 # 문제
-<div>
-    <img width="728" alt="스크린샷 2020-01-26 오후 11 32 21" src="https://user-images.githubusercontent.com/37113547/73136730-2b0f9380-4094-11ea-84c9-1defc3782bf5.png">
-</div>
+지원이에게 2진 수열을 가르쳐 주기 위해, 지원이 아버지는 그에게 타일들을 선물해주셨다. 그리고 이 각각의 타일들은 0 또는 1이 쓰여 있는 낱장의 타일들이다.  
+어느 날 짓궂은 동주가 지원이의 공부를 방해하기 위해 0이 쓰여진 낱장의 타일들을 붙여서 한 쌍으로 이루어진 00 타일들을 만들었다. 결국 현재 1 하나만으로 이루어진 타일 또는 0타일을 두 개 붙인 한 쌍의 00타일들만이 남게 되었다.  
+그러므로 지원이는 타일로 더 이상 크기가 N인 모든 2진 수열을 만들 수 없게 되었다. 예를 들어, N=1일 때 1만 만들 수 있고, N=2일 때는 00, 11을 만들 수 있다. (01, 10은 만들 수 없게 되었다.) 또한 N=4일 때는 0011, 0000, 1001, 1100, 1111 등 총 5개의 2진 수열을 만들 수 있다.  
+우리의 목표는 N이 주어졌을 때 지원이가 만들 수 있는 모든 가짓수를 세는 것이다. 단 타일들은 무한히 많은 것으로 가정하자.  
 
 # 입력
-> 첫째 줄에 테스트 케이스의 개수 T가 주어진다.  
-각 테스트 케이스는 한 줄로 이루어져 있고, N이 주어진다. N은 40보다 작거나 같은 자연수 또는 0이다.
+> 첫 번째 줄에 자연수 N이 주어진다.(N ≤ 1,000,000)
 
 -----
 ### 나의 처음 코드
