--- a/_posts/2020-1-27-백준 1904(문제풀이).md
+++ b/_posts/2020-1-27-백준 1904(문제풀이).md
@@ -14,34 +14,39 @@ title: BAEKJOON 1904
 
 -----
 ### 나의 처음 코드
->  저번 포스팅(2748)에서 다룬 피보나치 문제랑 별반 다를게 없다. 다만 이번에는, 계산할 때 사용된 0과 1의 갯수를 카운트 해서 구하라는 문제이다. 머릿속으로 5을 구할 때 필요한 0과 1의 갯수와 3과4를 구할 때 필요한 0과 1의 갯수를 따져보면 이 또한 피보나치 수열을 따르는 것을 볼 수 있다. 그 과정을 담은 코드는 다음과 같다.
+>  제일 처음 문제를 풀 때, dp문제가 아니라 나름 어떠한 공식을 가지고 있는 문제인 줄 알았다. 그래서 그 방식으로 문제를 풀었다. 그 코드는 아래와 같다. (설명이 짧은 이유 틀려서~)
 
 ~~~python
-n = int(input())
-num_list = []
-num_of_zero = [1,0,1]
-num_of_one = [0,1,1]
+N = int(input())
+count = 0
 
-def get_count(nth : int):
-    global num_of_one
-    global num_of_zero
-    #원하는 값이 이미 구해져있다면 pass
-    if len(num_of_one) >= nth + 1:
-        pass
-    else:
-        for i in range(len(num_of_one), nth+1):
-            num_of_one.append(num_of_one[i-1] + num_of_one[i-2])
-            num_of_zero.append(num_of_zero[i-1] + num_of_zero[i-2])
-      
-#get_count를 통해 num_of_zero와 num_of_one의 갯수를 차례로 채우고, 다음에 input이 존재하면 같은 과정을
-#반복 하지 못하게 해주는 작업
-for i in range(n):
-    num_list.append(int(input()))
-    get_count(num_list[-1])
-    
-#정답 프린트
-for i in num_list:
-    print(num_of_zero[i], num_of_one[i])
+for i in range(N//2 + 1):
+    if 2 * i == 0:
+        count += 1
+    elif 2 * i == N:
+        count += 1
+    elif 2 * i < N:
+        count = count + (N-(2*i)) + i
+print(count%15746)
 ~~~
-> 결과는 ***맞았습니다***. 저번 피보나치 포스팅 문제랑 다를게 없는 문제이다. 이 문제로는 아직까지 DP의 매력을 못 느낄 수도 있다! 허나 걱정 안해도 된다. 느므 믄타 :(
+> 결과는 ***틀렸습니다***.  내가 생각했던 방식대로 갯수가 흘러가지 않았다. 다른 방식으로 생각해보자. 아래의 몇개의 예시를 봐보자.  
+1 ->  1  
+00 11 -> 0 3   
+001 100 111 -> 1 4 7  
+1111 0011 1001 1100 0000 -> 0, 3, 9, 12, 15  
+즉, n이 주어졌을 때, 생길 수 있는 가지수는 홀수일 경우 1부터 시작해서 3씩 증가해, (2의 n승 -1) 까지, 짝수일 경우에는 0부터 시작해서 3씩 증가해, (2의 n승 -1) 까지이다.  점화식을 세워보면 알겠지만, 이 문제 또한 피보나치 수열이 적용되는 문제이다. 따라서 여느 dp 피보나치 수열 문제처럼 문제를 풀어주면 된다.
+-----
+### 정답
+~~~python
+N = int(input())
+fibo = [1, 2, 3, 5] #기존에 예시로 든 갯수들
 
+if N-1 < 4: #이미 있기 때문에
+    pass
+else: #없으면 피보나치 수열처럼 차례차례 메모라이징 하면서 구해준다
+    for i in range(4, N):
+        fibo.append((fibo[i-1] + fibo[i-2]) % 15746)
+            
+print(fibo[N-1])
+~~~
+> 너무 성급하게 문제를 바라보는 습관을 버려야 한다. 문제를 다방면으로 살펴보는 능력을 키워보자~!
