--- a/_posts/2020-1-29-백준 1149(문제풀이).md
+++ b/_posts/2020-1-29-백준 1149(문제풀이).md
@@ -50,4 +50,30 @@ print(price_min)
 -----
 
 > 처음에 입력받은 RGB의 집을 첫 번째 집이라고 했을 때, 점차 쌓아가는 방식으로 문제를 플어야 함을 대략적으로 느낄 것이다.  
-즉, 
+즉, 시간을 줄이는 대신 메모리를 늘려가는 방식으로 푼다고 생각하면 된다. ***메모라이징*** 을 통해서 이 문제를 접근해 보자.  
+간단한 예시로, 입력이 다음과 같다고 하자
+>> 40 15 20  
+15 30 20  
+1 100 200. 
+> 그렇다면, 두 번째 행에서는 첫 번째 행에서 가질 수 있는 최소를 가져야하고, 세 번째 행에서는 두 번째 까지 합친 것들 중에 최소를 가져가야 한다. 다음 코드를 함께 봐보자.  
+
+~~~python
+N = int(input())
+color_of_each = [list(map(int, input().split())) for i in range(N)]
+price_min = 10000001
+
+dp_list = [color_of_each[0]]
+
+for i in range(1, N):
+    temp_list = []
+    temp_list.append(min(dp_list[i-1][1], dp_list[i-1][2]) + color_of_each[i][0])
+    temp_list.append(min(dp_list[i-1][0], dp_list[i-1][2]) + color_of_each[i][1])
+    temp_list.append(min(dp_list[i-1][0], dp_list[i-1][1]) + color_of_each[i][2])
+    dp_list.append(temp_list)
+    
+print(min(dp_list[N-1]))
+~~~
+
+> ***맞았습니다*** 보시다 싶이, for문 안에서 위에서 설명한 작업을 해주고 있다. 첫 번째 행은 dp_list에 먼저 넣어주고, 위에서 설명한 작업을 계속 하는 것이다. 두 번째 행에서 R값을 골랐을 때, G, B에서 고를 수 있는 최소 값을 더해서 저장해준다. G값을 골랐을 떄도, B값을 골랐을 때도 똑같이 해주면 된다. 그러면 마지막에 붙은 리스트중 min값이 최소 비용이 되는 것이다.
+
+> 역시 dp문제는 내가 너무 약하다,,, 더 열심히,,,
