--- a/_posts/2020-1-31-백준 2579(문제풀이).md
+++ b/_posts/2020-1-31-백준 2579(문제풀이).md
@@ -28,57 +28,42 @@ title: BAEKJOON 2579
 
 -----
 ### 나의 처음 코드
->  동적 계획법에 대한 대체적인 내용들이 머릿속에서 쉽게 자리잡히지 않아서 처음에 문제를 접할 때 어려움이 있었다. 
+>  동적 계획법에 대한 대체적인 내용들이 머릿속에서 쉽게 자리잡히지 않아서 처음에 문제를 접할 때 어려움이 있었다. 그래서 제일 처음에 해야했던 작업은 점화식을 세우는 작업이다.  
+예를 들어보자. 제일 위에있는 계단을 n번째 계단이라고 했을 때, 그 아래는 n-1, n-2, n-3 순서대로 줄어들것이다. 그러면, 꼭대기로 갈 수 있는 간단한 경우의 수를 생각해보자.  
+첫 번째, n-3번째 계단을 밟고 n-1번째 계단을 밟고 n번째 계단에 도달하는 케이스  
+두 번째, n-2번째 계단을 밟고 n번째 계단에 바로 도달하는 케이스. 
+참고로 말하자면, 그림을 그리면서 생각하면 이해가 훨씬 쉬워진다. 자 그럼 점화식을 간단히 써보도록 하자.  
+D(n) 함수를 n번째 도달했을 경우 최대값이라고 하고, V(n) 함수를 n번째 계단의 cost라고 하자.  
+첫 번째 case의 점화식은 : D(n) = V(n) + V(n-1) + D(n-3) 이 된다.   
+두 번째 case의 점화식은 : D(n) = V(n) + D(n-2) 이 된다.  
+그럼 우리는 이 두 case중에 max인 값만 골라서 올라가주면 된다. 그 코드는 다음과 같다.
 
 ~~~python
 N = int(input())
-num_list = [list(map(int, input().split())) for i in range(N)]
-# print(num_list)
-dp_list = [[num_list[0][0]+num_list[1][0], num_list[0][0]+num_list[1][1]]]
-# print(dp_list)
-for i in range(2, N):
-    tmp_list = []
-    idx = 0
-    cnt = 0
-    for j in dp_list[0]:
-        if j != -1:
-            if j + num_list[i][idx] > j + num_list[i][idx+1]:
-                tmp_list.append(j+num_list[i][idx])
-                tmp_list.append(-1)
-                idx += 1
-            else:
-                tmp_list.append(-1)
-                tmp_list.append(j+num_list[i][idx+1])
-                idx += 1
-        else:
-            tmp_list.append(-1)
-            tmp_list.append(-1)
-    dp_list.clear()
-    dp_list.append(tmp_list)
-    
-print(max(dp_list[0]))
-~~~
-> 결과는 ***메모리 초과***.  공식을 세우면서 느낀거지만 당연히 메모리 초과가 난다는 것을 예감했다,,, n층에는 2의 n승으로 커지기 떄문이다. 2의 500승은 상상도 하기 싫은 숫자일 것이다... 자, 그러면 방식을 바꿔서 생각해보자.  
-새로운 리스트로 메모리를 낭비하기 보다, 비슷한 방식으로 주어진 메모리를 이용하면 어떨까???! 코드는 아래와 같다.
+num_list = [0] * (N+1)
+for i in range(N):
+    num_list[i] = int(input())
+dp_list = [0] * (N+1)
 
-~~~python
-N = int(input())
-num_list = [list(map(int, input().split())) for i in range(N)]
-
-for i in range(N-1, 0, -1):
-    for j in range(i):
-        if num_list[i][j] > num_list[i][j+1]:
-            num_list[i-1][j] += num_list[i][j]
-        else:
-            num_list[i-1][j] += num_list[i][j+1]
-            
-print(num_list[0][0])
+#1과 2경우에는 값이 자명하므로 직접 입력해준다.
+if N < 3:
+    for i in range(1, N+1):
+        if i == 2:
+            dp_list[i] = num_list[i-1] + num_list[i-2]
+        if i == 1:
+            dp_list[i] = num_list[i-1]
+    print(dp_list[N])
+#그 이상일 경우
+else:
+    #1과 2는 위와 같이 자명하므로 직접 입력해주고
+    for i in range(1,3):
+        if i == 2:
+            dp_list[i] = num_list[i-1] + num_list[i-2]
+        if i == 1:
+            dp_list[i] = num_list[i-1]
+    #그 이상일 경우에는 본문에서 설명한 것처럼 최대값을 찾아서 넣어주면 된다.
+    for i in range(3, N+1):
+        dp_list[i] = max(num_list[i-1] + num_list[i-2] + dp_list[i-3], num_list[i-1] + dp_list[i-2])    
+    print(dp_list[N])
 ~~~
------  
-> 일단 결과는 ***맞았습니다.*** !!. 아까랑 다른 점을 눈치채겠는가!? 새로운 리스트를 만드는 것이아니라, 입력값을 받은 리스트에서 아래로 내려가면서, 더해주면서 바꾸는 것이다. 간단한 예시를 들자면,  
->>1  
-2  4
-> 저렇게 구성되어 있을 경우 다음 단계는  
->>1  
-3  5
-> 이런식으로 더해지면서 바뀌는 것이다. 조건은 더할 수 있는 것중에 큰것을 더하면된다. 그러면 제일 아래에 남는 숫자들을 후보들의 집합이 되는 것이다. 그러면 최대 메모리는 N(N-1)/2 가 되므로 아까보다 더 절약할 수 있게 된다!!
+> 결과는 ***맞았습니다***.  쉬우면서도 어려운 DP문제인 것 같다. dp문제를 풀어볼 수록 이런 문제에 약한것을 느낀다,,, 곧 여행가는데,,,
