--- a/_posts/2020-2-23-Numpy기초.md
+++ b/_posts/2020-2-23-Numpy기초.md
@@ -19,10 +19,10 @@ np_array = np.array([1,2,3,4])
 ~~~python
 np_array = np.array([1,2])
 np_array2 = np.array([[1,2,3],[2,3,4]])
-np_array.shape #(2,) 즉, 1차원인데 2의 크기를 가진 1차원 배열이라는 뜻이다.
+np_array.shape #(2,) 즉, 1차원인데 2의 크기를 가진 1차원 배열이라는 뜻이다.ㄴ
 np_arary2.shape #(2, 3)
 np_array.ndim #1
 np_array2.ndim #2
 ~~~  
-> 
+> 다음으로 살펴볼 
 
