--- a/_posts/2020-2-23-Numpy기초.md
+++ b/_posts/2020-2-23-Numpy기초.md
@@ -24,5 +24,27 @@ np_arary2.shape #(2, 3)
 np_array.ndim #1
 np_array2.ndim #2
 ~~~  
-> 다음으로 살펴볼 
+> arr의 자료형을 확인할 수 있는 함수로는 dtype이 있다. 다음과 같다.  
+~~~python
+np_array.dtype #dtype('int32')
+~~~  
+type으로는 부호가 있는 정수 int(8, 16, 32, 64),  
+부호가 없는 정수 uint(8, 16, 32, 64) 등 여러개가 있다. 괄호 안에 들어있는 숫자는 크기를 의미한다. 나중에 image를 Visualization할 때  float32로 casting해야되는 부분이 있기 때문에, 조금은 알아두는게 수월하다.  
+
+-----
+
+> array를 쉽게 만드는 함수들에 대해서 배워볼 차례이다. 간단하게, np.zeros(), np.ones(), np.arange(), np.random.randn()함수가 있다. 어떤식으로 쓰이는지 다음 예시들을 보도록하자.  
+~~~python
+np.zeros(10) #array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0])
+np.zeros([2,3]) #array([[0., 0.], [0., 0.,], [0., 0.])
+
+np.ones(10) #array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,])
+np.ones([2,3]) #array([[1., 1.], [1., 1.], [1., 1.])
+
+np.arrange(3, 10) #array([3, 4, 5, 6, 7, 8, 9])
+
+np.random.randn(5) #array[(랜덤 5개 숫자)]
+np.random.randn(3, 3) #array[([랜덤 3개 숫자],[랜덤 3개 숫자],[랜덤 3개 숫자])]
+~~~  
+위의 예제에서 알다싶이 zeros나 ones는 배열에 채워지는 기본 값이 되고, 안에 들어가는 parameter로는 어떠한 형태의 배열을 만들지 정해주는 역할을 한다. arrange 같은 경우는 python을 많이 해본 사람이면 대충 짐작이 갈 것이다. 마지막 10은 포함 안 한다는 것을 알아두자. 그리고 random 같은 경우는 그 말대로 랜덤 숫자를 만들어주는데, 안의 parameter 또한 어떠한 형태의 배열을 만들지 정해주는 역할을 한다.
 
