문제 수정과 오늘 백준 토마토 문제 추가

--- a/_posts/2020-2-29-프로그래머스(기능개발).md
+++ b/_posts/2020-2-29-프로그래머스(기능개발).md
@@ -4,32 +4,38 @@ title: 프로그래머스 - 스택/큐 - 기능개발
 ---
 
 # 문제
+<img width="724" alt="스크린샷 2020-04-15 오후 1 18 20" src="https://user-images.githubusercontent.com/37113547/79298256-99d5ed80-7f1b-11ea-951c-46af3a7cdbf8.png">
 
-<img width="543" alt="문제설명" src="https://user-images.githubusercontent.com/37113547/75451971-bf7f5580-59b4-11ea-8344-acfcc3161f42.png">
-<img width="543" alt="문제설명2" src="https://user-images.githubusercontent.com/37113547/75451975-c0b08280-59b4-11ea-9eb4-c38fec8ed04e.png">
-
-# 제한조건
-
-<img width="543" alt="제한조건" src="https://user-images.githubusercontent.com/37113547/75451978-c1e1af80-59b4-11ea-8b42-37877845e4ee.png">
-
-
-# 입출력 예
-
-<img width="543" alt="입출력 예" src="https://user-images.githubusercontent.com/37113547/75451981-c312dc80-59b4-11ea-90b0-15dc8fb564e3.png">
-
-# 수정 전 코드
-## 테스트5에서 시간초과
-
-<img width="675" alt="수정전" src="https://user-images.githubusercontent.com/37113547/75451995-c908bd80-59b4-11ea-8393-47d29a32238b.png">
-
-# 수정 후 코드
-## sum()에 대한 고찰
-
-<img width="675" alt="수정후" src="https://user-images.githubusercontent.com/37113547/75451999-cc03ae00-59b4-11ea-84fb-810ffabfa92d.png">
-
+# 입력
+<img width="259" alt="스크린샷 2020-04-15 오후 1 15 40" src="https://user-images.githubusercontent.com/37113547/79298257-9a6e8400-7f1b-11ea-934a-b9970ade7f26.png">
 
 -----
+### 나의 처음 코드
+>  이러한 문제는 사실상 스택과 큐를 사용한다기 보다는, 큐의 작동원리를 알려주는 느낌이다. 100퍼가 되어야 개발되었다고 여기어지고, 또한 제일 앞에 있는 것이 먼저 배포되어야 다음것이 배포 될 수 있는 느낌의 문제이다. (사실상 효율로 따지면 완전 비효율적인 일처리인것이다 ㅋㅋ).  
+따라서 progresses배열 0번째 인덱스 기준으로 100이 넘는다면 뒤에 있는 것중에 100이넘는 것을 빼준다고 생각하면 된다.
 
-# 해설
-> sum()이 포문으로 다도는 것과, pop(0)시에 자리를 하나씩 왼쪽으로 옮기는데 있어서 나는 비효율에 대한 설명
+~~~python
+def solution(progresses, speeds):
+answer = []
+count = 0
+while speeds:
+    progresses = [progresses[i] + speeds[i] for i in range(len(progresses))]
+    if progresses[0] < 100:
+        continue
+    else:
+        for i in progresses:
+            if i >= 100:
+                count += 1
+            else:
+                break
+    if count != 0:
+        for i in range(count):
+            del progresses[0]
+            del speeds[0]
+            
+        answer.append(count)
+        count = 0
+return answer
+~~~
 
+> 결과는 ***맞았습니다***. 큐의 작동원리를 알고 있느냐가 중점인 문제다. pop해주는 과정에서, del 과 속도를 비교해봤을 때, del이 미세하게 더 빠른 속도를 보였다. 왜인지는 모르겠지만, 차라리 pop으로 효율을 보려면 배열 순서를 reverse해서 pop()을 해주면 더 빠른 속도를 보일 수 있다. 왜냐하면, pop(0)은 배열 맨 첫번째꺼를 뺴주면서 뒤에 있는 배열원소들이 앞으로 한칸씩 땡겨지기 때문이다. 생각을 해보자,,,1억개가 1억번씩 움직인다고,,, 우엑,,,,
