--- a/_posts/2020-3-01-프로그래머스(프린터).md
+++ b/_posts/2020-3-01-프로그래머스(프린터).md
@@ -4,32 +4,41 @@ title: 프로그래머스 - 스택/큐 - 프린터
 ---
 
 # 문제
+<img width="988" alt="스크린샷 2020-04-15 오후 1 28 40" src="https://user-images.githubusercontent.com/37113547/79298778-161d0080-7f1d-11ea-94ac-2de6f9c14dc7.png">
 
-<img width="543" alt="문제설명" src="https://user-images.githubusercontent.com/37113547/75451971-bf7f5580-59b4-11ea-8344-acfcc3161f42.png">
-<img width="543" alt="문제설명2" src="https://user-images.githubusercontent.com/37113547/75451975-c0b08280-59b4-11ea-9eb4-c38fec8ed04e.png">
-
-# 제한조건
-
-<img width="543" alt="제한조건" src="https://user-images.githubusercontent.com/37113547/75451978-c1e1af80-59b4-11ea-8b42-37877845e4ee.png">
-
-
-# 입출력 예
-
-<img width="543" alt="입출력 예" src="https://user-images.githubusercontent.com/37113547/75451981-c312dc80-59b4-11ea-90b0-15dc8fb564e3.png">
-
-# 수정 전 코드
-## 테스트5에서 시간초과
-
-<img width="675" alt="수정전" src="https://user-images.githubusercontent.com/37113547/75451995-c908bd80-59b4-11ea-8393-47d29a32238b.png">
-
-# 수정 후 코드
-## sum()에 대한 고찰
-
-<img width="675" alt="수정후" src="https://user-images.githubusercontent.com/37113547/75451999-cc03ae00-59b4-11ea-84fb-810ffabfa92d.png">
-
+# 입력
+<img width="322" alt="스크린샷 2020-04-15 오후 1 28 56" src="https://user-images.githubusercontent.com/37113547/79298780-16b59700-7f1d-11ea-914d-dcb884f9022b.png">
 
 -----
+### 나의 처음 코드
+>  이 문제는 큐에 관련된 문제이다. 우선순위와 순서에 맞춰 인쇄를 해주는 것이다. 처음 문제를 접할 때는 어떠한 자료구조를 써서 문제를 해결해나가야 할지 고민을 해야한다. 우리는 '큐'를 쓸것이고, 지금 검사하는 우선순위 보다 큰 우선순위가 있는지 없는지 존재의 여부를 알아야할 것이다. 나는 여기서 check_arr를 써서 특정 우선순위를 가지고 있는 인쇄물들의 갯수를 저장하였다. 따라서 내가 검사하는 인쇄물이 제일 높은 우선순위라면, pop을 해주고 우선순위를 알면되는 것이다. 
 
-# 해설
-> sum()이 포문으로 다도는 것과, pop(0)시에 자리를 하나씩 왼쪽으로 옮기는데 있어서 나는 비효율에 대한 설명
+~~~python
+def solution(priorities, location):
+    answer = 0
+    check_arr = [0] * 10
+    #우선순위 순서를 가지고 있는 list
+    loc_key = [i for i in range(len(priorities))]
+    #우선순위를 가지고 있는 list
+    loc_val = [i for i in priorities]
+    pop_idx = 1
+    #우선순위를 가지고 있는 원소의 갯수 체크
+    for i in priorities:
+        check_arr[i] += 1
+    while loc_val:
+        items_key = loc_key.pop(0)
+        items_val = loc_val.pop(0)
+        #지금 검사하는 인쇄물의 우선순위가 제일 높을 떄
+        if sum(check_arr[items_val + 1 :]) == 0:
+            if items_key == location:
+                return pop_idx
+            check_arr[items_val] -= 1
+            pop_idx += 1
+        #지금 검사하는 인쇄물보다 큰 우선순위가 있을 때
+        else:
+            loc_key.append(items_key)
+            loc_val.append(items_val)
+    return pop_idx
+~~~
 
+> 직관적으로 큐와 스택을 쓰는 문제는 알고리즘을 어떠한 식으로 구성하는지 보다는, 자료 구조를 어떠한 식으로 구성하여 문제의 요건을 충족할 것인가를 생각하면 좋을 것 같다.
