--- a/_posts/2020-3-02-프로그래머스(쇠막대기).md
+++ b/_posts/2020-3-02-프로그래머스(쇠막대기).md
@@ -1,35 +1,48 @@
 ---
 layout: post
-title: 프로그래머스 - 스택/큐 - 프린터
+title: 프로그래머스 - 스택/큐 - 쇠막대기
 ---
 
+
 # 문제
+<div>
+<img width="895" alt="스크린샷 2020-04-15 오후 1 38 50" src="https://user-images.githubusercontent.com/37113547/79299256-8e37f600-7f1e-11ea-8471-cd6f931484e8.png">
+<img width="895" alt="스크린샷 2020-04-15 오후 1 38 59" src="https://user-images.githubusercontent.com/37113547/79299257-8ed08c80-7f1e-11ea-9c43-02d54ed162db.png">
+</div>
 
-<img width="543" alt="문제설명" src="https://user-images.githubusercontent.com/37113547/75451971-bf7f5580-59b4-11ea-8344-acfcc3161f42.png">
-<img width="543" alt="문제설명2" src="https://user-images.githubusercontent.com/37113547/75451975-c0b08280-59b4-11ea-9eb4-c38fec8ed04e.png">
-
-# 제한조건
-
-<img width="543" alt="제한조건" src="https://user-images.githubusercontent.com/37113547/75451978-c1e1af80-59b4-11ea-8b42-37877845e4ee.png">
-
-
-# 입출력 예
-
-<img width="543" alt="입출력 예" src="https://user-images.githubusercontent.com/37113547/75451981-c312dc80-59b4-11ea-90b0-15dc8fb564e3.png">
-
-# 수정 전 코드
-## 테스트5에서 시간초과
-
-<img width="675" alt="수정전" src="https://user-images.githubusercontent.com/37113547/75451995-c908bd80-59b4-11ea-8393-47d29a32238b.png">
-
-# 수정 후 코드
-## sum()에 대한 고찰
-
-<img width="675" alt="수정후" src="https://user-images.githubusercontent.com/37113547/75451999-cc03ae00-59b4-11ea-84fb-810ffabfa92d.png">
-
+# 입력
+<img width="278" alt="스크린샷 2020-04-15 오후 1 39 08" src="https://user-images.githubusercontent.com/37113547/79299260-9001b980-7f1e-11ea-872f-c63cffbbc1f5.png">
 
 -----
+### 나의 처음 코드
+>  문제와 같은 비슷한 문제들을 접해본 적이 있을 것이다. 나는 '프로그래밍 언어'라는 수업을 들으면서, Parsing 관련 코딩을 할 때 토나올 때까지 접해본 기억이 있다.  
+이 문제는 스택과 관계가 있다. 스택을 책으로 공부해본 사람이라면, 예제로도 비슷한 예시를 드는 것을 기억할 것이다. 여기에서는 문법오류를 찾는 대신에, ()를 만나면 잘리는 나무막대기의 갯수를 찾는 것이다. 다음과 같은 규칙을 볼 수 있다.  
+1. ( 의 갯수대로 ()를 만났을 때 왼쪽에 막대기가 생긴다
+2. 를 만나면 막대기 갯수 + 1 해준다.
+3. 위의 과정 반복  
+) 를 만났을 때, 잘릴 때 추가되는 막대기가 줄어든 다는 것을 생각하면 된다. 규칙을 읽고 이해가 안 간다면 노트에 그림을 그려서 이해하기를 추천한다. 코드는 다음과 같다.
 
-# 해설
-> sum()이 포문으로 다도는 것과, pop(0)시에 자리를 하나씩 왼쪽으로 옮기는데 있어서 나는 비효율에 대한 설명
+~~~python
+def solution(arrangement):
+    #잘리면 추가되는 총 막대기 수
+    num_of_bar = 0
+    #잘리면 생기는 막대기 수
+    cnt_of_left = 0
+    arr_idx = 0
+    while arr_idx != len(arrangement):
+        if arrangement[arr_idx] == '(':
+            if arrangement[arr_idx + 1] == ')':
+                num_of_bar += cnt_of_left
+                arr_idx += 2
+            else:
+                cnt_of_left += 1
+                arr_idx += 1
+        else:
+            num_of_bar += 1
+            cnt_of_left -= 1
+            arr_idx += 1
 
+    return num_of_bar
+~~~
+
+> 스택이라는 자료구조와 규칙을 찾아서 푸는 문제이다. 자세히 들여다 보면 어렵지 않은데, 그림만 보고 겁을 먹으면 안된다. 그림을 주었다는 것은 설명에 도움이 더 되라는 것이기 때문이다. 호호
