--- a/_posts/2020-3-05-프로그래머스(완주하지 못한 선수).md
+++ b/_posts/2020-3-05-프로그래머스(완주하지 못한 선수).md
@@ -5,31 +5,25 @@ title: 프로그래머스 - 해시 - 완주하지 못한 선수
 
 # 문제
 
-<img width="543" alt="문제설명" src="https://user-images.githubusercontent.com/37113547/75451971-bf7f5580-59b4-11ea-8344-acfcc3161f42.png">
-<img width="543" alt="문제설명2" src="https://user-images.githubusercontent.com/37113547/75451975-c0b08280-59b4-11ea-9eb4-c38fec8ed04e.png">
+<img width="796" alt="스크린샷 2020-04-15 오후 4 56 04" src="https://user-images.githubusercontent.com/37113547/79312561-065fe500-7f3a-11ea-8089-a4128ced4312.png">
 
-# 제한조건
-
-<img width="543" alt="제한조건" src="https://user-images.githubusercontent.com/37113547/75451978-c1e1af80-59b4-11ea-8b42-37877845e4ee.png">
-
-
-# 입출력 예
-
-<img width="543" alt="입출력 예" src="https://user-images.githubusercontent.com/37113547/75451981-c312dc80-59b4-11ea-90b0-15dc8fb564e3.png">
-
-# 수정 전 코드
-## 테스트5에서 시간초과
-
-<img width="675" alt="수정전" src="https://user-images.githubusercontent.com/37113547/75451995-c908bd80-59b4-11ea-8393-47d29a32238b.png">
-
-# 수정 후 코드
-## sum()에 대한 고찰
-
-<img width="675" alt="수정후" src="https://user-images.githubusercontent.com/37113547/75451999-cc03ae00-59b4-11ea-84fb-810ffabfa92d.png">
+# 입력
+<img width="796" alt="스크린샷 2020-04-15 오후 4 56 08" src="https://user-images.githubusercontent.com/37113547/79312566-07911200-7f3a-11ea-98b9-f8bdb3cd2ee6.png">
 
 
 -----
+### 나의 처음 코드
+>  음 해쉬라기보다는, 그냥,,음,,,그냥 문제이다? dict도 안썼고, 그냥 길이 맞춰주고 비교만 했다. 다른 사람들의 풀이를 보니깐 Collection의 Counter를 이용해서 문제를 한줄로 끝낸 사람도 있지만! 나는 import를 안 하자 주의기 때문에 딱 적당한 것 같다. 코드 자체도 직관적이라 굳이 설명이 필요없다.
 
-# 해설
-> sum()이 포문으로 다도는 것과, pop(0)시에 자리를 하나씩 왼쪽으로 옮기는데 있어서 나는 비효율에 대한 설명
+~~~python
+def solution(participant, completion):
+participant.sort()
+completion.sort()
+completion.append('@')
 
+for i in range(len(participant)):
+    if participant[i] != completion[i]:
+        return participant[i]
+~~~
+
+> 이 문제는 딱히 할말이,,,, ㅋㅋㅋ
