--- a/_posts/2020-3-06-프로그래머스(전화번호 목록).md
+++ b/_posts/2020-3-06-프로그래머스(전화번호 목록).md
@@ -5,31 +5,42 @@ title: 프로그래머스 - 해시 - 전화번호 목록
 
 # 문제
 
-<img width="543" alt="문제설명" src="https://user-images.githubusercontent.com/37113547/75451971-bf7f5580-59b4-11ea-8344-acfcc3161f42.png">
-<img width="543" alt="문제설명2" src="https://user-images.githubusercontent.com/37113547/75451975-c0b08280-59b4-11ea-9eb4-c38fec8ed04e.png">
+<img width="719" alt="스크린샷 2020-04-15 오후 5 12 10" src="https://user-images.githubusercontent.com/37113547/79314120-4fb13400-7f3c-11ea-9956-6658ab93dadd.png">
 
-# 제한조건
-
-<img width="543" alt="제한조건" src="https://user-images.githubusercontent.com/37113547/75451978-c1e1af80-59b4-11ea-8b42-37877845e4ee.png">
-
-
-# 입출력 예
-
-<img width="543" alt="입출력 예" src="https://user-images.githubusercontent.com/37113547/75451981-c312dc80-59b4-11ea-90b0-15dc8fb564e3.png">
-
-# 수정 전 코드
-## 테스트5에서 시간초과
-
-<img width="675" alt="수정전" src="https://user-images.githubusercontent.com/37113547/75451995-c908bd80-59b4-11ea-8393-47d29a32238b.png">
-
-# 수정 후 코드
-## sum()에 대한 고찰
-
-<img width="675" alt="수정후" src="https://user-images.githubusercontent.com/37113547/75451999-cc03ae00-59b4-11ea-84fb-810ffabfa92d.png">
+# 입력
+<img width="380" alt="스크린샷 2020-04-15 오후 5 12 18" src="https://user-images.githubusercontent.com/37113547/79314138-52ac2480-7f3c-11ea-9ee5-9e134291fa68.png">
 
 
 -----
+### 나의 처음 코드
+>  이 문제는 해쉬라기 보다는, 그냥 완전탐색 느낌으로 풀었다... 그래도 시간초과가 안 난걸 보아하니 딱히 문제가 없는 것 같다. 여기서 깨달은거는 [1,2,3,4] 라는 리스트가 있으면 [:100]을 해도 없는 인덱스 참조오류가 안 뜨고 리스트의 끝까지 출력한다는 뜻이다. 즉 세그먼트 안 뜨고 잘 작동한다는 뜻이다. 코드는 다음과 같다.
 
-# 해설
-> sum()이 포문으로 다도는 것과, pop(0)시에 자리를 하나씩 왼쪽으로 옮기는데 있어서 나는 비효율에 대한 설명
+~~~python
+def solution(phone_book):
+    answer = True
+    phone_book.sort(key = lambda x : len(x))
+    
+    for i in range(len(phone_book) - 1):
+        len_of_book = len(phone_book[i])
+        for j in range(i+1, len(phone_book)):
+            if phone_book[i][:len_of_book] == phone_book[j][:len_of_book]:
+                return False
 
+    return answer
+~~~
+
+> for문 2개를 써서 풀 수도 있지만, startswith라는 함수를 써서 할 수도 있다.  
+~~~python
+str.startswith(prefix, start=0, end=-1)
+str.startswith(prefix, start=0, end=-1)
+~~~  
+> 위와 같이 함수는 구성이 되어있고, String의 내장함수이다. 위의 함수를 쓰면 원하는 index range 안에서 겹치는 문자가 있는지 없는지 볼 수 있다. 참고하자~! zip과 startswith로 문제 풀기는 다음 코드 참고.  
+~~~python
+def solution(phoneBook):
+phoneBook = sorted(phoneBook)
+
+for p1, p2 in zip(phoneBook, phoneBook[1:]):
+    if p2.startswith(p1):
+        return False
+return True
+~~~
