--- a/_posts/2020-3-07-프로그래머스(위장).md
+++ b/_posts/2020-3-07-프로그래머스(위장).md
@@ -1,1 +1,36 @@
+---
+layout: post
+title: 프로그래머스 - 해시 - 위장
+---
 
+# 문제
+
+<img width="1139" alt="스크린샷 2020-04-15 오후 5 29 35" src="https://user-images.githubusercontent.com/37113547/79316035-be8f8c80-7f3e-11ea-82c4-147e374172e7.png">
+
+# 입력
+<img width="796" alt="스크린샷 2020-04-15 오후 5 29 43" src="https://user-images.githubusercontent.com/37113547/79316037-bfc0b980-7f3e-11ea-8fdd-9ff7c9a603d8.png">
+
+
+-----
+### 나의 처음 코드
+>  dict로 입력 받은 종류에 숫자를 카운트해서  조합으로 계산해주면 된다. 마지막에 return 에서 -1 해주는 것은 아무것도 입지 않았을 때를 제외해주기 위해서이다.
+
+~~~python
+def solution(clothes):
+check_arr = {}
+tmp = 1
+
+for i in clothes:
+    if i[-1] in check_arr:
+        check_arr[i[-1]] += 1
+    else:
+        check_arr[i[-1]] = 1
+
+#조합 계산 부분
+for i in list(check_arr.values()):
+    tmp *= (i+1)
+        
+return tmp - 1
+~~~
+
+> 자료구조만 잘 세우면 쉬운 해쉬!
