--- a/_posts/2020-3-04-프로그래머스(주식가격).md
+++ b/_posts/2020-3-04-프로그래머스(주식가격).md
@@ -1,35 +1,30 @@
 ---
 layout: post
-title: 프로그래머스 - 스택/큐 - 프린터
+title: 프로그래머스 - 스택/큐 - 주식가격
 ---
 
+
 # 문제
+<img width="923" alt="스크린샷 2020-04-15 오후 1 50 47" src="https://user-images.githubusercontent.com/37113547/79299951-4ca84a80-7f20-11ea-961c-1b6344698183.png">
 
-<img width="543" alt="문제설명" src="https://user-images.githubusercontent.com/37113547/75451971-bf7f5580-59b4-11ea-8344-acfcc3161f42.png">
-<img width="543" alt="문제설명2" src="https://user-images.githubusercontent.com/37113547/75451975-c0b08280-59b4-11ea-9eb4-c38fec8ed04e.png">
-
-# 제한조건
-
-<img width="543" alt="제한조건" src="https://user-images.githubusercontent.com/37113547/75451978-c1e1af80-59b4-11ea-8b42-37877845e4ee.png">
-
-
-# 입출력 예
-
-<img width="543" alt="입출력 예" src="https://user-images.githubusercontent.com/37113547/75451981-c312dc80-59b4-11ea-90b0-15dc8fb564e3.png">
-
-# 수정 전 코드
-## 테스트5에서 시간초과
-
-<img width="675" alt="수정전" src="https://user-images.githubusercontent.com/37113547/75451995-c908bd80-59b4-11ea-8393-47d29a32238b.png">
-
-# 수정 후 코드
-## sum()에 대한 고찰
-
-<img width="675" alt="수정후" src="https://user-images.githubusercontent.com/37113547/75451999-cc03ae00-59b4-11ea-84fb-810ffabfa92d.png">
-
+# 입력
+<img width="254" alt="스크린샷 2020-04-15 오후 1 50 54" src="https://user-images.githubusercontent.com/37113547/79299953-4d40e100-7f20-11ea-9db5-f0d2c3e7141a.png">
 
 -----
+### 나의 처음 코드
+>  스택/큐에 들어가 있는 이유를 모르겠는 문제이다. 물론 스택/큐를 사용해서 풀 수는 있지만 안 그래도 되는 문제를 굳이 그렇게 풀 필요가 없잖아요? ^^ 심플하다, 완전탐색이라고 생각하고 자기보다 가격이 떨어지는 시간을 측정하면 된다.
 
-# 해설
-> sum()이 포문으로 다도는 것과, pop(0)시에 자리를 하나씩 왼쪽으로 옮기는데 있어서 나는 비효율에 대한 설명
+~~~python
+def solution(prices):
+answer = [0] * len(prices)
 
+for i in range(len(prices)-1):
+    for j in range(i, len(prices)-1):
+        if prices[i] > prices[j]:
+            break
+        else:
+            answer[i] +=1
+return answer
+~~~
+
+> 이 문제는 딱히 할말이,,,, ㅋㅋㅋ
