--- a/_posts/2020-3-12-프로그래머스(이중 우선순위 큐).md
+++ b/_posts/2020-3-12-프로그래머스(이중 우선순위 큐).md
@@ -1,1 +1,43 @@
+---
+layout: post
+title: 프로그래머스 - Heap - 이중우선순위큐
+---
+
+
 # 문제
+<img width="813" alt="스크린샷 2020-04-17 오후 3 18 24" src="https://user-images.githubusercontent.com/37113547/79539075-92037e00-80c0-11ea-9c9c-471d019cdd36.png">
+
+# 입력
+<img width="813" alt="스크린샷 2020-04-17 오후 3 18 31" src="https://user-images.githubusercontent.com/37113547/79539090-9891f580-80c0-11ea-991f-b1c567ddfee9.png">
+
+-----
+### 나의 처음 코드
+> 음,,, 이 문제는 왜 우선순위지,,,? 내가 그렇게 안 푼건가,,,? 흠흠,,,, 난 이렇게 풀었다,,, 딱히 설명할 길이 없다. 리스트에서 append, pop한게 끝이기 때문에,,, ㅎㅎ
+-----
+
+~~~python
+def solution(operations):
+arr = []
+for operation in operations:
+    op_arr = operation.split(' ')
+    operation = op_arr[0]
+    value = int(op_arr[1])
+    
+    if operation == 'I':
+        arr.append(value)
+    else:
+        if value == -1:
+            if len(arr) > 0:
+                arr.pop(arr.index(min(arr)))
+        else:
+            if len(arr) > 0:
+                arr.pop(arr.index(max(arr)))
+
+if len(arr) > 0:
+    return [max(arr), min(arr)]
+else:
+    return [0,0]
+~~~
+
+> why priority heap?
+
